# game_with_copilot

./: README.md  agent.py  index.html  install.sh  prompts_snake.md  prompts_tetris.md  pyproject.toml  script.js  style.css  test_summary.md
src/games/snake/: __init__.py  snake_game.py
src/games/tetris/: config.py  tetris.py
tests/: __init__.py  conftest.py  test_snake_game.py  test_snake_game_extended.py  test_tetris_game.py  test_tetromino.py
